--- a/index.html
+++ b/index.html
@@ -56,16 +56,16 @@
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi tincidunt, tortor nec rhoncus dictum, lorem massa tempus sem, eu tincidunt libero velit sit amet velit. Nunc in euismod urna. Duis dapibus, elit eu eleifend tincidunt, nulla ipsum consectetur lorem, quis tempor lorem justo quis nisi. Nam interdum, nisi nec mollis sagittis, enim risus euismod nisi, quis rutrum quam augue id mauris. Pellentesque mattis hendrerit semper. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Ut vestibulum nisl ante, et ultricies sapien facilisis aliquam.</p>
                 </div>
             </section>
-
-            <h3>SUBSCRIBE</h3>
+            <section></section>
+            
             <h4>Sign up for newsletter</h4>
 
-            <form>
+            <form class="formulario">
                 <input type="text" placeholder="Your Email"/>
             </form>
 
             <div>
-                <p>SUBMIT</p>
+                <button>SUBMIT</button>
             </div>
         </main>
 
